test/syc/good/arrayidx.c
/*
 * Array indexing
 */

int a[10];
int idx;
int r;

void arrayread(void)
{
	r = a[idx];
}

void arraywrite(void)
{
	a[idx] = r;
}
