test/syc/bad/arrayassign.c
/*
 * Assignment to an array
 */

int a[10];
int b[10];

void foo(void)
{
	a = b;
}
